1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ClassDisplayHideButton.[hm], CompleteProbeDisplayLabel.[hm],
	MessageProbeEntry.[hm], ProbeCanvas.[hm],
	SimpleProbeDisplayHideButton.[hm],
	SuperButton.[hm],VarProbeEntry.[hm]: New classes to encapsulate
	tkobjc_* functionality and give some explict semantics.

	* Histogram.[hm]:  Renamed from Histo.[hm].
	
	* tkobjc.m (registerInterp): New static function.
	(initTkObjc): Use registerInterp instead of
	tkobjc_registerCommand.

	* tkobjc.h: Use Histogram.h instead of Histo.h.
	Add ClassDisplayHideButton.h, SimpleProbeDisplayHideButton.h,
	SuperButton.h, MessageProbeEntry.h, VarProbeEntry.h, ProbeCanvas.h.
	Drop DragDrop.h.

	* common.[hm]: Add (remaining tkobjc_* routines from control).
	
	* control.[hm], DragDrop.[hm]:  Remove.
	
	* ZoomRaster.h: Reformatting throughout.

	* XColormap.m ([XColormap -map], [XColormap -pixelValue:],
	[XColormap -white], [XColormap -black]): Use GUI_PixelValue for
	return type.
	([XColormap -setColor:ToName:], [XColormap -colorIsSet:]): Use
	GUI_Color for first argument.
	([XColormap -setColor:ToRed:Green:Blue:]): Likewise.
	([XColormap -setColor:ToGrey:]): Likewise.

	* XColormap.h: Include <gui.h>
	Make XColormap conform to <Colormap>.
	Use GUI_PixelValue for map, pixelValue, white, black methods.
	Use GUI_Color for pixelValue for colorIsSet: and setColor methods.

	* Widget.m: Don't include string.h, stdio.h, stdlib.h, stdarg.h,
	tclObjc.h, and TkInterp.h.  Include tkobjc/common.h.
	([Widget -createEnd]): Use new method setWidgetNameFromParent:
	instead of makeNameFromParentName:.
	([Widget -pack]): Use tclobjc_pack instead of calling
	globalTkInterp directly.
	(makeWidgetName): New static function (functionality of
	makeNameFromParentName).
	([Widget -makeWidgetNameFor:], [Widget -setWidgetNameFromParent:],
	[Widget -setWidgetNameFromParentName:], [Widget -packToRight:],
	[Widget -packBeforeAndFillLeft:expand:],
	[Widget -packFillLeft:], [Widget -packFill], [Widget