@@ -4,11 +4,13 @@
 // See file LICENSE for details and terms of copying.
 
 #import <X11/Xlib.h>
+
 // protocol for a "Drawer", something that draws itself with Xlib
 // calls on a Drawable at a given location. Raster calls this method
 // on objects it is given by the draw:X:Y: method.
 // Note that the GC is given to you just for convenience: you should
 // not permanently alter it, as other code might be using that same GC.
+
 @protocol XDrawer
--drawOn: (Drawable) w X: (int) x Y: (int) y GC: (GC) gc Caller: Caller;
+- drawOn: (Drawable)w X: (int)x Y: (int)y GC: (GC)gc Caller: Caller;
 @end
